assignment1/src/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readNumber'", "'writeNumber'", "'readBool'", 
                     "'writeBool'", "'readString'", "'writeString'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'<-'", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'...'", "'=='", "'func'", "'true'", 
                     "'false'", "'number'", "'bool'", "'string'", "'return'", 
                     "'var'", "'dynamic'", "'for'", "'until'", "'by'", "'break'", 
                     "'continue'", "'if'", "'else'", "'elif'", "'begin'", 
                     "'end'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "'\n'", 
                     "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "NOT_OP", "AND_OP", "OR_OP", 
                      "EQUAL", "ASSIGN", "NOT_EQUAL", "SMALLER", "SMALLER_EQUAL", 
                      "LARGER", "LARGER_EQUAL", "THREE_DOT", "DOUBLE_EQUAL", 
                      "FUNCTION", "TRUE", "FALSE", "NUMBER", "BOOL", "STRING", 
                      "RETURN", "VAR", "DYNAMIC", "FOR", "UNTIL", "BY", 
                      "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", 
                      "END", "NOT", "AND", "OR", "IDENTIFIER", "NUMBER_LIT", 
                      "BOOLEAN_LIT", "STRING_LIT", "CM", "NEWLINE", "LRB", 
                      "RRB", "LSB", "RSB", "COMMENT", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_manydeclare = 1
    RULE_declare = 2
    RULE_function_dec = 3
    RULE_comma_separate_param = 4
    RULE_param_tail = 5
    RULE_statement = 6
    RULE_variable_dec_stmt = 7
    RULE_assign_stmt = 8
    RULE_lhs = 9
    RULE_scalar_var = 10
    RULE_if_stmt = 11
    RULE_if_part = 12
    RULE_elif_part = 13
    RULE_else_part = 14
    RULE_condition_action = 15
    RULE_condition_expr = 16
    RULE_for_stmt = 17
    RULE_number_variable = 18
    RULE_update_expr = 19
    RULE_break_stmt = 20
    RULE_continue_stmt = 21
    RULE_return_stmt = 22
    RULE_func_call_stmt = 23
    RULE_comma_separate_argument = 24
    RULE_block_stmt = 25
    RULE_list_statement_nullable = 26
    RULE_statement_tail = 27
    RULE_variable_dec = 28
    RULE_vardec_normal_type = 29
    RULE_vardec_implicit_type = 30
    RULE_var_type = 31
    RULE_dynamic_type = 32
    RULE_vardec_array_type = 33
    RULE_single_dec = 34
    RULE_value_init = 35
    RULE_parameter = 36
    RULE_vardec_normal_param = 37
    RULE_vardec_array_param = 38
    RULE_build_in_func = 39
    RULE_readNumber = 40
    RULE_writeNumber = 41
    RULE_readBool = 42
    RULE_writeBool = 43
    RULE_readString = 44
    RULE_writeString = 45
    RULE_expr = 46
    RULE_expr1 = 47
    RULE_expr2 = 48
    RULE_expr3 = 49
    RULE_expr4 = 50
    RULE_expr5 = 51
    RULE_expr6 = 52
    RULE_expr7 = 53
    RULE_element_expr = 54
    RULE_index_operators = 55
    RULE_expr_array_type = 56
    RULE_operand = 57
    RULE_variables = 58
    RULE_function_call = 59
    RULE_array_dec = 60
    RULE_array_value = 61
    RULE_comma_separate_number = 62
    RULE_digit_tail = 63
    RULE_comma_separate_expr = 64
    RULE_expr_tail = 65
    RULE_newline_separate = 66
    RULE_newline_separate_optional = 67

    ruleNames =  [ "program", "manydeclare", "declare", "function_dec", 
                   "comma_separate_param", "param_tail", "statement", "variable_dec_stmt", 
                   "assign_stmt", "lhs", "scalar_var", "if_stmt", "if_part", 
                   "elif_part", "else_part", "condition_action", "condition_expr", 
                   "for_stmt", "number_variable", "update_expr", "break_stmt", 
                   "continue_stmt", "return_stmt", "func_call_stmt", "comma_separate_argument", 
                   "block_stmt", "list_statement_nullable", "statement_tail", 
                   "variable_dec", "vardec_normal_type", "vardec_implicit_type", 
                   "var_type", "dynamic_type", "vardec_array_type", "single_dec", 
                   "value_init", "parameter", "vardec_normal_param", "vardec_array_param", 
                   "build_in_func", "readNumber", "writeNumber", "readBool", 
                   "writeBool", "readString", "writeString", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "element_expr", "index_operators", "expr_array_type", 
                   "operand", "variables", "function_call", "array_dec", 
                   "array_value", "comma_separate_number", "digit_tail", 
                   "comma_separate_expr", "expr_tail", "newline_separate", 
                   "newline_separate_optional" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    PLUS=7
    MINUS=8
    MUL=9
    DIV=10
    MOD=11
    NOT_OP=12
    AND_OP=13
    OR_OP=14
    EQUAL=15
    ASSIGN=16
    NOT_EQUAL=17
    SMALLER=18
    SMALLER_EQUAL=19
    LARGER=20
    LARGER_EQUAL=21
    THREE_DOT=22
    DOUBLE_EQUAL=23
    FUNCTION=24
    TRUE=25
    FALSE=26
    NUMBER=27
    BOOL=28
    STRING=29
    RETURN=30
    VAR=31
    DYNAMIC=32
    FOR=33
    UNTIL=34
    BY=35
    BREAK=36
    CONTINUE=37
    IF=38
    ELSE=39
    ELIF=40
    BEGIN=41
    END=42
    NOT=43
    AND=44
    OR=45
    IDENTIFIER=46
    NUMBER_LIT=47
    BOOLEAN_LIT=48
    STRING_LIT=49
    CM=50
    NEWLINE=51
    LRB=52
    RRB=53
    LSB=54
    RSB=55
    COMMENT=56
    WS=57
    ILLEGAL_ESCAPE=58
    UNCLOSE_STRING=59
    ERROR_TOKEN=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydeclare(self):
            return self.getTypedRuleContext(ZCodeParser.ManydeclareContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.manydeclare()
            self.state = 137
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.DeclareContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.DeclareContext,i)


        def getRuleIndex(self):
            return ZCodeParser.RULE_manydeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydeclare" ):
                return visitor.visitManydeclare(self)
            else:
                return visitor.visitChildren(self)




    def manydeclare(self):

        localctx = ZCodeParser.ManydeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.declare()
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.FUNCTION) | (1 << ZCodeParser.NUMBER) | (1 << ZCodeParser.BOOL) | (1 << ZCodeParser.STRING) | (1 << ZCodeParser.VAR) | (1 << ZCodeParser.DYNAMIC))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_dec(self):
            return self.getTypedRuleContext(ZCodeParser.Function_decContext,0)


        def variable_dec(self):
            return self.getTypedRuleContext(ZCodeParser.Variable_decContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = ZCodeParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.function_dec()
                pass
            elif token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.variable_dec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ZCodeParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LRB(self):
            return self.getToken(ZCodeParser.LRB, 0)

        def comma_separate_param(self):
            return self.getTypedRuleContext(ZCodeParser.Comma_separate_paramContext,0)


        def RRB(self):
            return self.getToken(ZCodeParser.RRB, 0)

        def newline_separate_optional(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_separate_optionalContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_function_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_dec" ):
                return visitor.visitFunction_dec(self)
            else:
                return visitor.visitChildren(self)




    def function_dec(self):

        localctx = ZCodeParser.Function_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ZCodeParser.FUNCTION)
            self.state = 149
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 150
            self.match(ZCodeParser.LRB)
            self.state = 151
            self.comma_separate_param()
            self.state = 152
            self.match(ZCodeParser.RRB)
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 153
                self.newline_separate_optional()
                self.state = 154
                self.return_stmt()

            elif la_ == 2:
                self.state = 156
                self.newline_separate_optional()
                self.state = 157
                self.block_stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comma_separate_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterContext,0)


        def param_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Param_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_comma_separate_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComma_separate_param" ):
                return visitor.visitComma_separate_param(self)
            else:
                return visitor.visitChildren(self)




    def comma_separate_param(self):

        localctx = ZCodeParser.Comma_separate_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comma_separate_param)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.parameter()
                self.state = 162
                self.param_tail()
                pass
            elif token in [ZCodeParser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def parameter(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterContext,0)


        def param_tail(self):
            return self.getTypedRuleContext(ZCodeParser.Param_tailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_param_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_tail" ):
                return visitor.visitParam_tail(self)
            else:
                return visitor.visitChildren(self)




    def param_tail(self):

        localctx = ZCodeParser.Param_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_tail)
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(ZCodeParser.CM)
                self.state = 168
                self.parameter()
                self.state = 169
                self.param_tail()
                pass
            elif token in [ZCodeParser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_dec_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Variable_dec_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.For_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def func_call_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Func_call_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ZCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 174
                self.variable_dec_stmt()
                pass

            elif la_ == 2:
                self.state = 175
                self.assign_stmt()
                pass

            elif la_ == 3:
                self.state = 176
                self.if_stmt()
                pass

            elif la_ == 4:
                self.state = 177
                self.for_stmt()
                pass

            elif la_ == 5:
                self.state = 178
                self.break_stmt()
                pass

            elif la_ == 6:
                self.state = 179
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.state = 180
                self.return_stmt()
                pass

            elif la_ == 8:
                self.state = 181
                self.func_call_stmt()
                pass

            elif la_ == 9:
                self.state = 182
                self.block_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_dec_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_dec(self):
            return self.getTypedRuleContext(ZCodeParser.Variable_decContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variable_dec_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_dec_stmt" ):
                return visitor.visitVariable_dec_stmt(self)
            else:
                return visitor.visitChildren(self)




    def variable_dec_stmt(self):

        localctx = ZCodeParser.Variable_dec_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_dec_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.variable_dec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(ZCodeParser.LhsContext,0)


        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_assign_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = ZCodeParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.lhs()
            self.state = 188
            self.match(ZCodeParser.ASSIGN)
            self.state = 189
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_var(self):
            return self.getTypedRuleContext(ZCodeParser.Scalar_varContext,0)


        def array_dec(self):
            return self.getTypedRuleContext(ZCodeParser.Array_decContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_lhs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLhs" ):
                return visitor.visitLhs(self)
            else:
                return visitor.visitChildren(self)




    def lhs(self):

        localctx = ZCodeParser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lhs)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.scalar_var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.array_dec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_scalar_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalar_var" ):
                return visitor.visitScalar_var(self)
            else:
                return visitor.visitChildren(self)




    def scalar_var(self):

        localctx = ZCodeParser.Scalar_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_scalar_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(ZCodeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'
